using System;

namespace Vehicles.Gateways
{
    public class VehicleModel
    {
        public DateTime DateOfConstruction { get; set; }
        public string VehicleId { get; set; }
        public string Model { get; set; }
    }
}
